--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav>
             <a href="./index.html" lang="en">WebStudio</a>
             <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
+                <li><a href="./index.html">Студия</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
@@ -32,7 +32,7 @@
         </section>
         <!--Особенности-->
         <section>
-            <h2>Особенности</h2>
+            <h2 hidden>Особенности</h2>
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
