--- a/portfolio.html
+++ b/portfolio.html
@@ -40,47 +40,47 @@
 
             <ul>
                 <li>
-                    <img src="./images/techkryak.jpg" alt="Ноутбук с этим открытым веб-сайтом">
+                    <img src="./images/techkryak.jpg" alt="Ноутбук с этим открытым веб-сайтом" width="370">
                     <h2>Технокряк</h2>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/new-orlean.jpg" alt="постер с баскитболистами">
+                    <img src="./images/new-orlean.jpg" alt="постер с баскитболистами" width="370">
                     <h2>Постер New Orlean vs Golden Star</h2>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/seafood.jpg" alt="Логотип ресторана с рыбой">
+                    <img src="./images/seafood.jpg" alt="Логотип ресторана с рыбой" width="370">
                     <h2>Ресторан Seafood</h2>
                     <p>Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/prime.jpg" alt="Наушники">
+                    <img src="./images/prime.jpg" alt="Наушники" width="370">
                     <h2>Проект Prime</h2>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/boxes.jpg" alt="Коробки">
+                    <img src="./images/boxes.jpg" alt="Коробки" width="370">
                     <h2>Проект Boxes</h2>
                     <p>Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/no-borders.jpg" alt="Монитор с этим открытым веб-сайтом">
+                    <img src="./images/no-borders.jpg" alt="Монитор с этим открытым веб-сайтом" width="370">
                     <h2>Inspiration has no Borders</h2>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/limited-edition.jpg" alt="Открытая книга">
+                    <img src="./images/limited-edition.jpg" alt="Открытая книга" width="370">
                     <h2>Издание Limited Edition</h2>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/lab.jpg" alt="Товарная бирка с логотипом компании">
+                    <img src="./images/lab.jpg" alt="Товарная бирка с логотипом компании" width="370">
                     <h2>Проект LAB</h2>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/growing-business.jpg" alt="Ноутбук с этим открытым приложением">
+                    <img src="./images/growing-business.jpg" alt="Ноутбук с этим открытым приложением" width="370">
                     <h2>Growing Business</h2>
                     <p>Приложение</p>
                 </li>
