--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <!-- Хедер -->
     <header>
         <nav>
-            <a href="./index.html" lang="en">WebStudio</a>
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
+            <a href="./index.html" lang="en" class="logo-header"><span>Web</span>Studio</a>
+            <ul class="nav-links">
+                <li><a href="./index.html" cla>Студия</a></li>
                 <li><a href="./portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="header-adress">
             <li><a href="mailto:info@example.com" lang="en">info@devstudio.com</a></li>
             <li><a href="tel:+380991111111">+38 096 111 11 11</a></li>
         </ul>
@@ -26,14 +26,14 @@
     <!--Мейн-->
     <main>
         <!--Заказ услуг-->
-        <section>
+        <section class="order-service">
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+            <button type="button" class="button">Заказать услугу</button>
         </section>
         <!--Особенности-->
         <section>
             <h2 hidden>Особенности</h2>
-            <ul>
+            <ul class="features">
                 <li>
                     <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -52,8 +52,10 @@
                 </li>
             </ul>
         </section>
+
         <!--Чем мы занимаемся-->
-        <section>
+
+        <section class="activities">
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li><img src="./images/work_1.jpg" alt="разработка сайтов" width="370"></li>
@@ -61,8 +63,10 @@
                 <li><img src="./images/work_3.jpg" alt="дизайн сайтов" width="370"></li>
             </ul>
         </section>
+
         <!--Наша команда-->
-        <section>
+
+        <section class="team">
             <h2>Наша команда</h2>
             <ul>
                 <li>
@@ -88,10 +92,12 @@
             </ul>
         </section>
     </main>
+
     <!--Футер-->
-    <footer>
-        <a href="./index.html" lang="en">WebStudio</a>
-        <address>
+
+    <footer class="footer">
+        <a href="./index.html" lang="en" class="logo-footer"> <span>Web</span>Studio</a>
+        <address class="address">
             г. Киев, пр-т Леси Украинки, 26 <br> 
             <a href="mailto:info@example.com">info@example.com</a> <br>
             <a href="tel:+380991111111">+38 099 111 11 11</a>  
