--- a/portfolio.html
+++ b/portfolio.html
@@ -5,26 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!-- Хедер -->
     <header>
         <nav>
-            <a href="./index.html" lang="en">WebStudio</a>
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
+            <a href="./index.html" lang="en" class="logo-header"><span>Web</span>Studio</a>
+            <ul class="nav-links">
+                <li><a href="./index.html" cla>Студия</a></li>
                 <li><a href="./portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="header-adress">
             <li><a href="mailto:info@example.com" lang="en">info@devstudio.com</a></li>
             <li><a href="tel:+380991111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!-- мейн -->
     <main>
-        <section>
+        <section class="portfolio">
 
             <h1 hidden>Варианты работ</h1>
 
@@ -92,15 +93,13 @@
       
     <!--Футер-->
 
-    <footer>
-        <a href="./index.html" lang="en">WebStudio</a>
-
-        <address>
-            г. Киев, пр-т Леси Украинки, 26 <br> 
+    <footer class="footer">
+        <a href="./index.html" lang="en" class="logo-footer"> <span>Web</span>Studio</a>
+        <address class="address">
+            г. Киев, пр-т Леси Украинки, 26 <br>
             <a href="mailto:info@example.com">info@example.com</a> <br>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>  
+            <a href="tel:+380991111111">+38 099 111 11 11</a>
         </address>
-
     </footer>
 </body>
 </html>
