--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <!-- Хедер -->
     <header>
         <nav>
-            <a href="./index.html" lang="en" class="logo-header"><span>Web</span>Studio</a>
+            <a href="./index.html" lang="en" class="logo-header"><span class="logo-header-front">Web</span>Studio</a>
             <ul class="nav-links">
-                <li><a href="./index.html" cla>Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+                <li><a href="./index.html" class="nav-links-link">Студия</a></li>
+                <li><a href="./portfolio.html"class="nav-links-link">Портфолио</a></li>
+                <li><a href="" class="nav-links-link">Контакты</a></li>
             </ul>
         </nav>
         <ul class="header-adress">
-            <li><a href="mailto:info@example.com" lang="en">info@devstudio.com</a></li>
-            <li><a href="tel:+380991111111">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@example.com" lang="en" class="header-adress-link">info@devstudio.com</a></li>
+            <li><a href="tel:+380991111111" class="header-adress-link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!--Мейн-->
@@ -28,26 +28,26 @@
         <!--Заказ услуг-->
         <section class="order-service">
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="button">Заказать услугу</button>
+            <button type="button" class="order-service-button">Заказать услугу</button>
         </section>
         <!--Особенности-->
         <section>
             <h2 hidden>Особенности</h2>
             <ul class="features">
                 <li>
-                    <h3>Внимание к деталям</h3>
+                    <h3 class="features-title">Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
+                    <h3 class="features-titler">Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
+                    <h3 class="features-titler">Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
+                    <h3 class="features-title">Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
@@ -56,7 +56,7 @@
         <!--Чем мы занимаемся-->
 
         <section class="activities">
-            <h2>Чем мы занимаемся</h2>
+            <h2 class="activities-title">Чем мы занимаемся</h2>
             <ul>
                 <li><img src="./images/work_1.jpg" alt="разработка сайтов" width="370"></li>
                 <li><img src="./images/work_2.jpg" alt="разработка мобильных приложений" width="370"></li>
@@ -67,26 +67,26 @@
         <!--Наша команда-->
 
         <section class="team">
-            <h2>Наша команда</h2>
+            <h2 class="team-title">Наша команда</h2>
             <ul>
                 <li>
                     <img src="./images/igor.jpg" alt="мужчина" width="270">
-                    <h3>Игорь Демьяненко</h3>
+                    <h3 class="team-subtitle">Игорь Демьяненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/olga.jpg" alt="женщина" width="270">
-                    <h3>Ольга Репина</h3>
+                    <h3 class="team-subtitle">Ольга Репина</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/nikolay.jpg" alt="мужчина" width="270">
-                    <h3>Николай Тарасов</h3>
+                    <h3 class="team-subtitle">Николай Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/mihail.jpg" alt="мужчина" width="270">
-                    <h3>Михаил Ермаков</h3>
+                    <h3 class="team-subtitle">Михаил Ермаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
             </ul>
@@ -96,11 +96,11 @@
     <!--Футер-->
 
     <footer class="footer">
-        <a href="./index.html" lang="en" class="logo-footer"> <span>Web</span>Studio</a>
+        <a href="./index.html" lang="en" class="logo-footer"> <span class="logo-footer-front">Web</span>Studio</a>
         <address class="address">
             г. Киев, пр-т Леси Украинки, 26 <br> 
-            <a href="mailto:info@example.com">info@example.com</a> <br>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>  
+            <a href="mailto:info@example.com" class="address-link">info@example.com</a> <br>
+            <a href="tel:+380991111111" class="address-link">+38 099 111 11 11</a>  
         </address>
     </footer>
 </body>
