--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -27,7 +31,7 @@
     <main>
         <!--Заказ услуг-->
         <section class="order-service">
-            <h1>Эффективные решения для вашего бизнеса</h1>
+            <h1 class="order-service-title">Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="order-service-button">Заказать услугу</button>
         </section>
         <!--Особенности-->
@@ -36,19 +40,19 @@
             <ul class="features">
                 <li>
                     <h3 class="features-title">Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
                     <h3 class="features-titler">Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
                     <h3 class="features-titler">Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
                     <h3 class="features-title">Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
@@ -57,7 +61,7 @@
 
         <section class="activities">
             <h2 class="activities-title">Чем мы занимаемся</h2>
-            <ul>
+            <ul class="activities-images">
                 <li><img src="./images/work_1.jpg" alt="разработка сайтов" width="370"></li>
                 <li><img src="./images/work_2.jpg" alt="разработка мобильных приложений" width="370"></li>
                 <li><img src="./images/work_3.jpg" alt="дизайн сайтов" width="370"></li>
@@ -68,26 +72,26 @@
 
         <section class="team">
             <h2 class="team-title">Наша команда</h2>
-            <ul>
+            <ul class="team-list">
                 <li>
                     <img src="./images/igor.jpg" alt="мужчина" width="270">
                     <h3 class="team-subtitle">Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <p lang="en" class="team-text">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/olga.jpg" alt="женщина" width="270">
                     <h3 class="team-subtitle">Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <p lang="en" class="team-text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/nikolay.jpg" alt="мужчина" width="270">
                     <h3 class="team-subtitle">Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <p lang="en" class="team-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/mihail.jpg" alt="мужчина" width="270">
                     <h3 class="team-subtitle">Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <p lang="en" class="team-text">UI Designer</p>
                 </li>
             </ul>
         </section>
