--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -33,7 +36,7 @@
 
             <h1 hidden>Варианты работ</h1>
 
-            <ul>
+            <ul class="portfolio-button-list">
                 <li><button type="button" class="portfolio-button">Все</button></li>
                 <li><button type="button" class="portfolio-button">Веб-сайты</button></li>
                 <li><button type="button" class="portfolio-button">Приложения</button></li>
@@ -43,51 +46,51 @@
 
             <!-- таблица с вариантами работ -->
 
-            <ul>
+            <ul class="portfolio-list">
                 <li>
                     <img src="./images/techkryak.jpg" alt="Ноутбук с этим открытым веб-сайтом" width="370">
                     <h2 class="portfolio-title">Технокряк</h2>
-                    <p>Веб-сайт</p>
+                    <p class="portfolio-text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/new-orlean.jpg" alt="постер с баскитболистами" width="370">
                     <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                    <p class="portfolio-text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/seafood.jpg" alt="Логотип ресторана с рыбой" width="370">
                     <h2 class="portfolio-title">Ресторан Seafood</h2>
-                    <p>Приложение</p>
+                    <p class="portfolio-text">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/prime.jpg" alt="Наушники" width="370">
                     <h2 class="portfolio-title">Проект Prime</h2>
-                    <p>Маркетинг</p>
+                    <p class="portfolio-text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/boxes.jpg" alt="Коробки" width="370">
                     <h2 class="portfolio-title">Проект Boxes</h2>
-                    <p>Приложение</p>
+                    <p class="portfolio-text">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/no-borders.jpg" alt="Монитор с этим открытым веб-сайтом" width="370">
                     <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                    <p class="portfolio-text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/limited-edition.jpg" alt="Открытая книга" width="370">
                     <h2 class="portfolio-title">Издание Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <p class="portfolio-text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/lab.jpg" alt="Товарная бирка с логотипом компании" width="370">
                     <h2 class="portfolio-title">Проект LAB</h2>
-                    <p>Маркетинг</p>
+                    <p class="portfolio-text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/growing-business.jpg" alt="Ноутбук с этим открытым приложением" width="370">
                     <h2 class="portfolio-title">Growing Business</h2>
-                    <p>Приложение</p>
+                    <p class="portfolio-text">Приложение</p>
                 </li>
             </ul>
 
