--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                     <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3 class="features-titler">Пунктуальность</h3>
+                    <h3 class="features-title">Пунктуальность</h3>
                     <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3 class="features-titler">Планирование</h3>
+                    <h3 class="features-title">Планирование</h3>
                     <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
